--- a/Android/bin/AndroidManifest.xml
+++ b/Android/bin/AndroidManifest.xml
@@ -4,10 +4,13 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <uses-feature android:name="android.hardware.camera"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>    
-    <uses-permission android:name="android.permission.CAMERA"/>    
-    
+    <uses-feature android:name="android.hardware.camera" />
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
