--- a/.classpath
+++ b/.classpath
@@ -46,5 +46,6 @@
 	<classpathentry kind="lib" path="JavaGoogleStuff/gdata/java/lib/gdata-youtube-2.0.jar"/>
 	<classpathentry kind="lib" path="JavaGoogleStuff/gdata/java/lib/gdata-youtube-meta-2.0.jar"/>
 	<classpathentry kind="lib" path="JavaGoogleStuff/gdata/guava-15.0.jar"/>
+	<classpathentry kind="src" path="/PictureToCalendar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
